--- a/views/Supervisorstudents.ejs
+++ b/views/Supervisorstudents.ejs
@@ -95,11 +95,11 @@ rel="stylesheet"
         <a href="/supervisor/approval" class="list-group-item list-group-item-action py-2 ripple"
         ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
       >
-        <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+        <!-- <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
           ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
-        >
+        > -->
         
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+        <a href="/logout" class="list-group-item list-group-item-action py-2 ripple">
           <i class="fas fa-chart-pie fa-fw me-3"></i><span>LogOut</span>
         </a>
        
@@ -127,12 +127,12 @@ rel="stylesheet"
 
       <!-- Brand -->
       <a class="navbar-brand" href="#">
-        <img
+        <!-- <img
           src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
           height="25"
           alt="MDB Logo"
           loading="lazy"
-        />
+        /> -->
       </a>
      
        <!-- Right links -->
