--- a/views/HODDashboard.ejs
+++ b/views/HODDashboard.ejs
@@ -93,11 +93,11 @@
             <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
             ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
           >
-            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+            <a href="/HOD/Report" class="list-group-item list-group-item-action py-2 ripple"
               ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
             >
             
-            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+            <a href="/logout" class="list-group-item list-group-item-action py-2 ripple">
               <i class=" fa fa-light fa-right-from-bracket me-3"></i><span>LogOut</span>
             </a>
            
@@ -126,12 +126,12 @@
             
                   <!-- Brand -->
                   <a class="navbar-brand" href="#">
-                    <img
+                    <!-- <img
                       src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
                       height="25"
                       alt="MDB Logo"
                       loading="lazy"
-                    />
+                    /> -->
                   </a>
                  
                    <!-- Right links -->
