--- a/views/HODThesispublish.ejs
+++ b/views/HODThesispublish.ejs
@@ -92,11 +92,11 @@ rel="stylesheet"
             <a href="/HOD/HODapproval" class="list-group-item list-group-item-action py-2 ripple"
             ><i class="fas fa-lock fa-fw me-3"></i><span>Approval</span></a
           >
-            <a href="/supervisor/Report" class="list-group-item list-group-item-action py-2 ripple"
+            <a href="/HOD/Report" class="list-group-item list-group-item-action py-2 ripple"
               ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
             >
             
-            <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+            <a href="/logout" class="list-group-item list-group-item-action py-2 ripple">
               <i class=" fa fa-light fa-right-from-bracket me-3"></i><span>LogOut</span>
             </a>
            
@@ -125,12 +125,12 @@ rel="stylesheet"
 
       <!-- Brand -->
       <a class="navbar-brand" href="#">
-        <img
+        <!-- <img
           src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
           height="25"
           alt="MDB Logo"
           loading="lazy"
-        />
+        /> -->
       </a>
      
        <!-- Right links -->
@@ -214,11 +214,11 @@ rel="stylesheet"
         <div class="modal-body">
           <%- student.description %>
         </div>
-        <div class="modal-footer">
+        <!-- <div class="modal-footer">
           <form action="/supervisor/students/supervise" method="get" style="display: inline; margin-right: 5px;">
             <button type="submit" id="approve" class="btn btn-outline-success" >Supervise</button>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
