--- a/views/studentThesis.ejs
+++ b/views/studentThesis.ejs
@@ -94,11 +94,11 @@ rel="stylesheet"
         <a href="/plagiarism" class="list-group-item list-group-item-action py-2 ripple"
           ><i class=" fa fa-light fa-spell-check me-3"></i><span>Plagiarism</span></a
         >
-        <a href="/studentReport" class="list-group-item list-group-item-action py-2 ripple"
+        <!-- <a href="/studentReport" class="list-group-item list-group-item-action py-2 ripple"
           ><i class="fa fa-duotone fa-marker me-3"></i><span>Report</span></a
-        >
+        > -->
         
-        <a href="#" class="list-group-item list-group-item-action py-2 ripple">
+        <a href="/logout" class="list-group-item list-group-item-action py-2 ripple">
           <i class="fa fa-duotone fa-right-from-bracket me-3"></i><span>LogOut</span>
         </a>
            
@@ -127,12 +127,12 @@ rel="stylesheet"
 
       <!-- Brand -->
       <a class="navbar-brand" href="#">
-        <img
+        <!-- <img
           src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
           height="25"
           alt="MDB Logo"
           loading="lazy"
-        />
+        /> -->
       </a>
      
        <!-- Right links -->
